--- a/static/css/resume.scss
+++ b/static/css/resume.scss
@@ -18,7 +18,9 @@ li{
 }
 .container{
   margin:0 auto;
+  background: #F1F8FD;
 }
+
 //Header
 header{
   background:url(../img/person-mountain-hiker-hiking.jpg) no-repeat center center scroll;
@@ -64,7 +66,7 @@ header{
   margin-top:50px;
 }
 .field li a{
-    padding-right:10px;
+  padding-right:10px;
 }
 .left.field{
   margin-right: 30px;
@@ -134,23 +136,25 @@ main{
     right: 104.5%;
   }
 }
-
+.education h4 span{
+  margin-right:20px;
+}
 .skills{
-    .desc{
-      flex-direction: column;
-      .each{
-        display: flex;
-        align-item:flex-start;
-        span{
-          display:inline-block;
-          width:30%;
-          line-height:1.4em;
-          &:last-child{
-            width:40%;
-          }
+  .desc{
+    flex-direction: column;
+    .each{
+      display: flex;
+      align-item:flex-start;
+      span{
+        display:inline-block;
+        width:30%;
+        line-height:1.4em;
+        &:last-child{
+          width:40%;
         }
       }
     }
+  }
 }
 
 .qualities{
@@ -204,6 +208,7 @@ main{
   }
   .career{
     padding: 0px;
+    margin-top: 20px;
   }
   .info{
     margin-top:10%;
@@ -218,6 +223,7 @@ main{
       right: 98.5%;
     }
   }
+
   .interests .desc{
     justify-content: space-between;
   }
@@ -240,5 +246,16 @@ main{
     justify-content: space-around;
   }
 }
-
+//css for print
+.print{
+  display:none;
+}
+@media print{
+  .print{
+    display: block;
+  }
+  .no-print{
+    display: none;
+  }
+}
 
